# krait

./: .gitignore  README.md  main.spec  pyproject.toml  requirements.txt
UI/: main.py  main_with_multistep.py  oxford_smiles.py  test_UI.py  test_UI_multistep.py
UI/Optimization/: Optimization.py  app.py  config.py
UI/hooks/: hook-mordred.py
clients/chromeleon_plugin/: CmSdkPoC.sln
clients/optimize/: app.py  core_models.py  export_utils.py  gradient_tools.py  optimize_nsga.py  plot_tools.py  sa_nsga_tools.py  simulate_tools.py  ui_defaults.py
clients/predict/: main_with_multistep.py  test_UI_multistep.py
data/PaDEL-Descriptor/: PadelOut
engine/: __init__.py  config.py  core_models.py  descriptors.py  gradient_tools.py  optimize_nsga.py  optimize_sa.py  predictor.py  sa_nsga_tools.py  simulation.py
model/: 1. descriptors_noredundancy.py  2. PCA.py  3. merge_VC_data.py  4. model_prep.py  5. train_model.py
model/archive/: 2.1 Silhouette.py  2.2 Descriptor_influence.py  3.1. hydrophobicity.py  4.1 model_prep_representative.py  4.2. model_prep_test_predColumn.py  4.3. model_prep_test_predColumn_plusGA.py  5.1 train_model_representative.py  5.2 train_model_supervised.py  5.3 train_model_manual.py  5.4 train_model_genetic.py  5.5 train_model_genetic_ensemble.py  5.6. train_model_predCol_plusGA.py  5.7. full_model_neue_kuss.py  5.8. spearman.py  6. analyze_outliers.py  7.1. k_means_representative_analytes.py  7.2 ks_and_dOptimal_representative_analytes.py  8. Interactive_Map.py  98. export_pc_importances.py  98.1. map_PC_importances.py  98.2 descriptor_info.py  (+2 more)
(+40 files in other folders)
